methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:3: error: not found: value c
    setBrushColor(c)
                  ^MethodsPicture:24: error: too many arguments for method makeV: ()Unit
      makeV(Color.YELLOW)
           ^MethodsPicture:25: error: too many arguments for method makeV: ()Unit
      makeV(Color.RED)
           ^MethodsPicture:26: error: too many arguments for method makeV: ()Unit
      makeV(Color.BLUE)
           ^MethodsPicture:27: error: too many arguments for method makeV: ()Unit
      makeV(Color.GREEN)
           ^